objects/Mass_Email_Request__c.object
<CustomObject>
    <fields>
        <fullName>English_email_template__c</fullName>
        <label>English email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>French_email_template__c</fullName>
        <label>French email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>German_email_template__c</fullName>
        <label>German email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Japanese_email_template__c</fullName>
        <label>Japanese email template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Emails_not_sent__c</fullName>
        <label>Number of Emails not sent</label>
        <summaryFilterItems>
            <field>Mass_Email_Request_Detail__c.Email_Sent__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Mass_Email_Request_Detail__c.Mass_Email_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Emails_sent__c</fullName>
        <label>Number of Emails sent</label>
        <summaryFilterItems>
            <field>Mass_Email_Request_Detail__c.Email_Sent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Mass_Email_Request_Detail__c.Mass_Email_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>In process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Number_of_Emails_sent__c +  Number_of_Emails_not_sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mass Email Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mass Email Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Email Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>